--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "materialize-css": "^0.97.8",
     "vue": "^2.0.1"
   },
   "devDependencies": {
